deployment/website/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: portfolio
          image: anilsezer/portfolio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 443 # todo: Remove this
          startupProbe:
            httpGet:
              path: /liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
